# moos-ivp-gkarolos

./: .gitignore
missions/alder/: alder.moos
missions/lab_04/alpha/: alpha.moos
missions/lab_04/s3_alpha/: alpha.bhv
missions/lab_04/s4_alpha/: alpha.moos
missions/lab_04/s5_alpha/: alpha.bhv
missions/lab_04/s6_alpha/: alpha.bhv
missions/lab_04/s7_alpha/: alpha.bhv  alpha.moos
missions/lab_05/alpha_return/: alpha.moos
missions/lab_05/bravo_loiter/: bravo.bhv  bravo.moos
missions/lab_05/bravo_loiter_dbl/: bravo.bhv
missions/lab_05/bravo_loiter_uuv/: bravo.bhv  bravo.moos
missions/lab_05/bravo_uuv_fair/: bravo.bhv
missions/lab_05/bravo_uuv_odometry/: launch.sh  meta_bravo.bhv  meta_bravo.moos
missions/lab_13/alpha_zigleg/: alpha.bhv
missions/pid_benchmark/: launch.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  zlaunch.sh
missions/s2_alpha/: alpha.bhv
missions/s3_alpha/: alpha.moos
missions/s5_alpha/: alpha.moos
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_Pulse.cpp  BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/lib_bhv_scout/: BHV_Scout.cpp  BHV_Scout.h
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  main.cpp
src/pGenRescue/: CMakeLists.txt  GenRescue.cpp  GenRescue.h  GenRescue_Info.cpp  GenRescue_Info.h  main.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp
(+27 files in other folders)
